--- a/current_version/taskinbox/index.html
+++ b/current_version/taskinbox/index.html
@@ -196,7 +196,7 @@
             // --- Other tasks (Original tasks renamed/moved IDs to avoid conflict) ---
             { id: 2, title: "IT资产采购配置表录入", process: "采购请求", applicant: "张华", dueDate: "2025-11-19", priority: "Medium", type: "DataEntry", status: "Pending", content: "需要录入三台新服务器的详细配置和供应商信息。非报表任务。", icon: '💻', reports: [] },
             { id: 3, title: "新员工入职材料清单确认", process: "人力资源入职流程", applicant: "王芳", dueDate: "2025-11-28", priority: "High", type: "Checklist", status: "Pending", content: "确认新员工（陈悦）所有入职材料已提交和归档。工号：HR801。", icon: '👶', reports: [] },
-            { id: 4, title: "合同条款修订反馈", process: "法律审查", applicant: "赵丽", dueDate: "2025-12-01", priority: "Low", type: "Review", status: "Pending", content: "针对销售合同模板的第5条进行法律审查并提出修改意见。", icon: '📝', reports: [] },
+            { id: 4, title: "11月对账月结-销售-差异报告与调整", process: "对账月结", applicant: "赵丽", dueDate: "2025-12-01", priority: "Low", type: "Review", status: "Pending", content: "针对销售合同模板的第5条进行法律审查并提出修改意见。", icon: '📝', reports: [] },
             { id: 5, title: "系统故障报告处理及填写", process: "系统事件处理", applicant: "系统管理员", dueDate: "2025-12-05", priority: "High", type: "Report", status: "Pending", content: "SaaS平台核心服务宕机，请立即开始故障处理流程并记录所有步骤，需填写事故报告表。", icon: '🚨',
               reports: [{ id: 'R6', name: '事故原因分析报告', data: 'Data for R6', active: true }, { id: 'R7', name: '修复操作日志', data: 'Data for R7', active: false }] },
             { id: 6, title: "2025 Q3 绩效评估提交", process: "人力资源绩效管理", applicant: "李明", dueDate: "2025-10-30", priority: "Medium", type: "Review", status: "Completed", content: "已完成Q3绩效评估的提交。", icon: '⭐', reports: [] },
