--- a/current_version/buget/index.html
+++ b/current_version/buget/index.html
@@ -177,7 +177,7 @@
                              快速导航
                          </h2>
                          <ul class="flex flex-col space-y-1">
-                             <li><a href="index.html" target="_blank" class="flex items-center text-indigo-600 hover:text-indigo-800 text-xs font-medium"><svg class="w-3 h-3 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg> 预算编制看板</a></li>
+                             <li><a href="budget_kanban.html" target="_blank" class="flex items-center text-indigo-600 hover:text-indigo-800 text-xs font-medium"><svg class="w-3 h-3 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg> 预算编制看板</a></li>
                              <li><a href="taskinbox_index.html" target="_blank" class="flex items-center text-indigo-600 hover:text-indigo-800 text-xs font-medium"><svg class="w-3 h-3 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg> 任务待办中心</a></li>
                              <li><a href="#" class="flex items-center text-indigo-600 hover:text-indigo-800 text-xs font-medium"><svg class="w-3 h-3 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"></path></svg> 说明文档</a></li>
                          </ul>
@@ -509,6 +509,25 @@
             return ['text-gray-600', '']; // Normal
         }
 
+        // START MODIFICATION 2: Add Kanban Button generation function
+        /**
+         * 生成跳转到看板页面的按钮 HTML，并带上流程实例ID参数。
+         * @param {number} caseId - 流程实例的 ID。
+         * @returns {string} 按钮的 HTML 字符串。
+         */
+        function getKanbanButtonHtml(caseId) {
+            // 构造带参数的 URL，例如：budget_kanban.html?id=1001
+            const kanbanUrl = `budget_kanban.html?id=${caseId}`;
+
+            // 返回一个使用 Tailwind CSS 样式美化的超链接按钮
+            return `<a href="${kanbanUrl}" target="_blank"
+                       class="text-xs font-semibold text-indigo-600 hover:text-indigo-800 transition py-1 px-2 rounded-md bg-indigo-50 hover:bg-indigo-100 flex items-center justify-center w-full">
+                        <svg class="w-3 h-3 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 17v-2m3 2v-4m3 4v-6m2 10H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
+                        看板
+                    </a>`;
+        }
+        // END MODIFICATION 2
+
 
         /** Renders the milestone list (Unchanged) */
         function renderMilestoneList(milestones) {
@@ -634,42 +653,46 @@
                     </div>
                 `;
 
-                // --- ACTION BUTTONS LOGIC (NEW) ---
-                let actionButtonsHtml = `
-                    <button onclick="event.stopPropagation(); handleCaseAction(${caseItem.id}, 'ViewKanban')" class="px-2 py-0.5 text-2xs font-medium rounded-md text-indigo-600 hover:bg-indigo-100 transition">
-                        看板
-                    </button>
-                `;
+                // START MODIFICATION 3: Action Buttons Logic Refactored
+                // 1. Kanban Button (Direct Link using helper function)
+                const kanbanButtonHtml = getKanbanButtonHtml(caseItem.id);
+
+                // 2. Other Action Buttons (Non-Kanban) - Use w-full and mt-1 for stacking
+                let otherActionButtonsHtml = '';
+                const buttonClass = "px-2 py-0.5 text-2xs font-medium rounded-md w-full transition mt-1";
 
                 if (caseItem.status === 'Active') {
                      // Terminate/Pause for Active cases
-                     actionButtonsHtml += `
-                         <button onclick="event.stopPropagation(); handleCaseAction(${caseItem.id}, 'Pause')" class="px-2 py-0.5 text-2xs font-medium rounded-md text-amber-600 hover:bg-amber-100 transition ml-1">
+                     otherActionButtonsHtml += `
+                         <button onclick="event.stopPropagation(); handleCaseAction(${caseItem.id}, 'Pause')" class="${buttonClass} text-amber-600 hover:bg-amber-100">
                              暂停
                          </button>
-                         <button onclick="event.stopPropagation(); handleCaseAction(${caseItem.id}, 'Terminate')" class="px-2 py-0.5 text-2xs font-medium rounded-md text-red-600 hover:bg-red-100 transition ml-1">
+                         <button onclick="event.stopPropagation(); handleCaseAction(${caseItem.id}, 'Terminate')" class="${buttonClass} text-red-600 hover:bg-red-100">
                              终止
                          </button>
                      `;
                 } else if (caseItem.status === 'Paused') {
                      // Resume/Terminate for Paused cases
-                     actionButtonsHtml += `
-                         <button onclick="event.stopPropagation(); handleCaseAction(${caseItem.id}, 'Resume')" class="px-2 py-0.5 text-2xs font-medium rounded-md text-green-600 hover:bg-green-100 transition ml-1">
+                     otherActionButtonsHtml += `
+                         <button onclick="event.stopPropagation(); handleCaseAction(${caseItem.id}, 'Resume')" class="${buttonClass} text-green-600 hover:bg-green-100">
                              恢复
                          </button>
-                         <button onclick="event.stopPropagation(); handleCaseAction(${caseItem.id}, 'Terminate')" class="px-2 py-0.5 text-2xs font-medium rounded-md text-red-600 hover:bg-red-100 transition ml-1">
+                         <button onclick="event.stopPropagation(); handleCaseAction(${caseItem.id}, 'Terminate')" class="${buttonClass} text-red-600 hover:bg-red-100">
                              终止
                          </button>
                      `;
                 } else if (caseItem.status === 'Completed' || caseItem.status === 'Failed') {
                     // Restart for Completed/Failed cases
-                    actionButtonsHtml += `
-                        <button onclick="event.stopPropagation(); handleCaseAction(${caseItem.id}, 'Restart')" class="px-2 py-0.5 text-2xs font-medium rounded-md text-green-600 hover:bg-green-100 transition ml-1">
+                    otherActionButtonsHtml += `
+                        <button onclick="event.stopPropagation(); handleCaseAction(${caseItem.id}, 'Restart')" class="${buttonClass} text-green-600 hover:bg-green-100">
                             再次发起
                         </button>
                     `;
                 }
-                // --- END ACTION BUTTONS LOGIC ---
+
+                // 3. Combine them in a flex-col container
+                const combinedActionsHtml = `<div class="flex flex-col space-y-1 w-full">${kanbanButtonHtml}${otherActionButtonsHtml}</div>`;
+                // END MODIFICATION 3
 
 
                 html += `
@@ -700,9 +723,9 @@
                         </td>
 
                         <td class="py-2 text-sm text-left whitespace-nowrap">
-                            ${actionButtonsHtml}
+                            ${combinedActionsHtml}
                         </td>
-                    </tr>
+                        </tr>
                 `;
             });
 
@@ -994,7 +1017,7 @@
             }
         }
 
-        // --- Event Handlers (Updated initiateNewCase and handleCaseAction) ---
+        // --- Event Handlers (Updated handleCaseAction) ---
 
         function initiateNewCase() {
             // Open the new case modal instead of direct creation
@@ -1005,15 +1028,13 @@
             const caseItem = mockCases.find(c => c.id === caseId);
             if (!caseItem) return;
 
-            if (action === 'ViewKanban') {
-                if (caseItem.id === 1001) {
-                    // Assuming 'index.html' is the Kanban view
-                    window.open('index.html', '_blank');
-                    showMessage(`正在打开【${caseItem.name}】的树形看板页面...`, 'info');
-                } else {
-                    showMessage(`模拟跳转到实例 ID ${caseId} 的看板视图。`, 'info');
-                }
-            } else if (action === 'Terminate') {
+            // START MODIFICATION 5: Remove ViewKanban action as it's now a direct link
+            // if (action === 'ViewKanban') {
+            //     // This logic is now handled by the <a> tag
+            // } else
+            // END MODIFICATION 5
+
+            if (action === 'Terminate') {
                 if (confirm(`确定要终止流程实例 ID ${caseId}：【${caseItem.name}】吗？这操作不可逆！`)) {
                     caseItem.status = 'Cancelled';
                     caseItem.currentPhase = '已终止';
