--- a/current_version/buget/index.html
+++ b/current_version/buget/index.html
@@ -520,7 +520,7 @@
             const kanbanUrl = `budget_kanban.html?id=${caseId}`;
 
             // 返回一个使用 Tailwind CSS 样式美化的超链接按钮
-            return `<a href="${kanbanUrl}" target="_blank"
+            return `<a href="${kanbanUrl}"
                        class="text-xs font-semibold text-indigo-600 hover:text-indigo-800 transition py-1 px-2 rounded-md bg-indigo-50 hover:bg-indigo-100 flex items-center justify-center w-full">
                         <svg class="w-3 h-3 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 17v-2m3 2v-4m3 4v-6m2 10H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
                         看板
