--- a/current_version/closing/closing_kanban.html
+++ b/current_version/closing/closing_kanban.html
@@ -463,7 +463,8 @@
                 showMessage(`正在新标签页中打开待办任务中心，任务 ID: ${inboxTaskId}，并筛选流程为【对账月结】`, 'info');
                 const processName = '对账月结';
                 const url = `../taskinbox/index.html?taskId=${inboxTaskId}&processFilter=${encodeURIComponent(processName)}`;
-                window.open(url, '_blank');
+                // window.open(url, '_blank');
+                window.location.href = url;
             } else {
                 showMessage(`节点 ID ${kanbanNodeId} 暂无对应待办任务 (Inbox Task ID)。`, 'warning');
             }
